--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
 
     <!-- Main -->
     <main>
+      <!-- Parte grigia sotto all'header -->
+      <div class="under_header">
+        <div class="undertitle container">
+          <h2>Le scuole di lingua tradizionali non sono efficaci</h2>
+          <h3>Solo un corso incentrato sulla Fluency può portare ad una soluzione definitiva concreta.</h3>
+        </div>
+      </div>
+      <!-- Fine parte grigia sotto all'header -->
     <!-- Prima riga -->
       <div class="row">
         <div class="col_4"></div>
