Completata la prima riga
Ho completato la prima riga.

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <header>
       <!-- Navbar -->
       <nav class="navbar container">
-        <div class="nav_left"><img src="img/logo.svg" alt="logo di fluentify"></div>
-        <div class="nav_center">
+        <div class="nav_left float_left"><img src="img/logo.svg" alt="logo di fluentify"></div>
+        <div class="nav_center float_left">
           <a href="#">il metodo</a>
           <a href="#">la tecnologia</a>
           <a href="#">real-life english</a>
           <a href="#">soluzioni aziendali</a>
         </div>
-        <div class="nav_right">
+        <div class="nav_right float_left">
           <a href="#">diventa un tutor</a>
           <a href="#" class="button" id="login">login</a>
           <a href="#" class="button green" id="piano">struttura un piano</a>
@@ -46,17 +46,38 @@
         </div>
       </div>
       <!-- Fine parte grigia sotto all'header -->
-    <!-- Prima riga -->
-      <div class="row">
-        <div class="col_4"></div>
-        <div class="col_4"></div>
-        <div class="col_4"></div>
+
+      <!-- Prima riga -->
+      <div class="row_one container">
+
+        <div class="col_4 float_left">
+          <img class="img_first_row"src="img/profile.svg" alt="">
+          <h2>Piano formativo configurato sul proprio livello</h2>
+          <hr>
+          <p>Un metodo improntato sullo speaking con percorsi basati esattamente sulle esigenze personali dei partecipanti. Tutto parte da un accurato test di partenza per definire il livello e impostare gli obiettivi da raggiungere.</p>
+        </div>
+
+        <div class="col_4 float_left">
+          <img class="img_first_row"src="img/computer.svg" alt="">
+          <h2>Affiancamento costante del tutor</h2>
+          <hr>
+          <p>Scopri il syllabus, la guida per il tuo percorso. Scegli gli argomenti per passare al livello successivo e affrontali con i tutor nelle sessioni one-to-one.</p>
+        </div>
+
+        <div class="col_4 float_left">
+          <img class="img_first_row"src="img/doc.svg" alt="">
+          <h2>Piano formativo configurato sul proprio livello</h2>
+          <hr>
+          <p>Controlla i tuoi progressi con i dati elaborati dal nostro sistema. Hai il pieno controllo su miglioramenti e obiettivi raggiunti.</p>
+        </div>
+
       </div>
-    <!-- Fine prima riga -->
-    <!-- Seconda riga -->
-      <div class="row">
-        <div class="col_6"></div>
-        <div class="col_6"></div>
+      <!-- Fine prima riga -->
+
+      <!-- Seconda riga -->
+      <div class="row_two container">
+        <div class="col_6 float_left"></div>
+        <div class="col_6 float_left"></div>
       </div>
     <!-- Fine seconda riga -->
 
