Completata la seconda riga
Ho completato anche la seconda riga

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <!-- Fine parte grigia sotto all'header -->
 
       <!-- Prima riga -->
-      <div class="row_one container">
+      <div class="row_one container mb_40 mt_40 ">
 
         <div class="col_4 float_left">
           <img class="img_first_row"src="img/profile.svg" alt="">
@@ -73,11 +73,15 @@
 
       </div>
       <!-- Fine prima riga -->
-
+      <hr id="between_rows">
       <!-- Seconda riga -->
-      <div class="row_two container">
-        <div class="col_6 float_left"></div>
-        <div class="col_6 float_left"></div>
+      <div class="row_two container mt_40 mb_40">
+        <div class="col_6 float_left"><img src="img/mountain.svg" alt="" id="mountain"></div>
+        <div class="col_6 float_left" id="personalize">
+          <h2>Scopri il tuo livello iniziale e struttura un piano personalizzato</h2>
+          <p>L'esperienza Fluentify parte sempre da un test di placement per avere una chiara visione del tuo inglese, ad oggi.</p>
+          <a href="#">Scopri il nostro test di placement</a>
+        </div>
       </div>
     <!-- Fine seconda riga -->
 
