Inserito il footer
ho nserito anche il footer.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- Main -->
     <main>
       <!-- Parte grigia sotto all'header -->
-      <div class="under_header">
+      <div class="under_header grey">
         <div class="undertitle container">
           <h2>Le scuole di lingua tradizionali non sono efficaci</h2>
           <h3>Solo un corso incentrato sulla Fluency può portare ad una soluzione definitiva concreta.</h3>
@@ -85,14 +85,28 @@
       </div>
     <!-- Fine seconda riga -->
 
-
-
-
     </main>
     <!-- Fine Main -->
 
     <!-- Footer -->
-    <footer></footer>
+    <footer class="footer_container grey">
+
+        <div class="f_element float_left">
+          <h2>Struttura un piano</h2>
+        </div>
+        <div class="f_element float_left margin_selection">
+          <form>
+            <span>Sono</span>
+            <select name="selection" class="selection" id="list_selection">
+              <option value="">Seleziona</option>
+              <option value="uomo">Uomo</option>
+              <option value="donna">Donna</option>
+            </select>
+            <button type="submit" name="button" class="button green selection">Visualizza il tuo piano</button>
+          </form>
+        </div>
+
+    </footer>
     <!-- Fine Footer -->
 
   </body>
