--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Copia Fluentify</title>
   </head>
   <body>
+    <div id="help" class="button green">help</div>
     <!-- Header -->
     <header>
       <!-- Navbar -->
